--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,8 @@ dependencies {
 
     implementation group: 'org.yaml', name: 'snakeyaml', version: '2.0'
 
-
+    implementation 'org.aspectj:aspectjrt:1.9.7'
+    implementation 'org.aspectj:aspectjweaver:1.9.7'
 }
 
 test {
