--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 
     implementation group: 'org.yaml', name: 'snakeyaml', version: '2.0'
 
-
+    testImplementation 'org.mockito:mockito-core:3.10.0'
 }
 
 test {
